Configure keyboard layout in sway

--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -9,6 +9,11 @@ set $right l
 set $term alacritty
 set $menu kickoff
 
+input type:keyboard {
+  xkb_layout "us"
+  xkb_variant "altgr-intl"
+}
+
 ### Key bindings
 #
 # Basics:
