Stop monitoring activity and change activity color

--- a/dot_config/tmux/statusbar.conf
+++ b/dot_config/tmux/statusbar.conf
@@ -6,10 +6,6 @@ set-option -g status-position top
 # window separators
 set-option -wg window-status-separator ""
 
-# monitor window changes
-set-option -wg monitor-activity on
-set-option -wg monitor-bell on
-
 # set statusbar update interval
 set-option -g status-interval 1
 
@@ -25,7 +21,7 @@ set-option -g status-style bg=terminal,fg="#a89984"
 set-option -wg window-status-style bg="#3c3836",fg="#7c6f64"
 
 # colors for windows with activity
-set-option -wg window-status-activity-style bg="#3c3836",fg="#a89984"
+set-option -wg window-status-activity-style bg="#3c3836",fg="#fe8019"
 
 # colors for windows with bells
 set-option -wg window-status-bell-style bg="#3c3836",fg="#fe8019"
