Show time on tmux statusbar

--- a/dot_config/tmux/statusbar.conf
+++ b/dot_config/tmux/statusbar.conf
@@ -55,7 +55,7 @@ set-option -wg clock-mode-colour "#fe8019"
 # statusbar formatting
 # "#fe8019" MUST be in lowercase here (conflicts with statusline alias otherwise)
 set-option -g status-left ""
-set-option -g status-right "#[bg=#a89984, fg=#3c3836]#{?client_prefix,#[bg=#fe8019],#[bg=#a89984]} #{host_short} "
+set-option -g status-right "#[bg=#a89984, fg=#3c3836]#{?client_prefix,#[bg=#fe8019],#[bg=#a89984]} %H:%M "
 
 set-option -wg window-status-current-format "#{?window_zoomed_flag,#[fg=default bold],#[fg=default]} #{window_index} #{window_name} "
 set-option -wg window-status-format "#{?window_zoomed_flag,#[fg=default bold],#[fg=default]} #{window_index} #{window_name} "
