Change how tmux shows titles

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -24,6 +24,7 @@ set-option -sa terminal-overrides ',alacritty*:Tc'
 
 # dynamically set titles
 set-option -g set-titles on
+set-option -g set-titles-string '#{pane_title}'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
