--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -13,6 +13,12 @@ set $menu kickoff
 input type:keyboard {
   xkb_layout "us"
   xkb_variant "altgr-intl"
+  xkb_options "caps:escape"
+}
+
+input "7504:24868:Ultimate_Gadget_Laboratories_UHK_60_v2" {
+  xkb_layout "us"
+  xkb_variant "altgr-intl"
 }
 
 bindsym $mod+Return exec $term
