--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -123,5 +123,10 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+bindsym Mod1+space exec --no-startup-id dunstctl close
+bindsym Mod1+Shift+space exec --no-startup-id dunstctl close-all
+bindsym Mod1+grave exec --no-startup-id dunstctl history-pop
+
 # Autostart
 exec --no-startup-id nm-applet
+exec --no-startup-id dunst
