--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -120,13 +120,7 @@ bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 
 bar {
     position top
-    status_command ~/.config/sway/swaybar.sh
-
-    colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
-    }
+    status_command i3status-rs
 }
 
 default_border pixel 1
