Quit resize mode with $mod+r

--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -111,6 +111,7 @@ mode "resize" {
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
+    bindsym $mod+r mode "default"
 }
 bindsym $mod+r mode "resize"
 
