--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -119,6 +119,10 @@ bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindsym XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 
+bindsym XF86AudioPlay exec playerctl --ignore-player firefox play-pause
+bindsym XF86AudioPrev exec playerctl --ignore-player firefox previous
+bindsym XF86AudioNext exec playerctl --ignore-player firefox next
+
 bar {
     position top
     status_command i3status-rs
