Enable hyperlink support for alacritty in tmux

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -19,8 +19,9 @@ bind-key P choose-buffer  # tmux clipboard history
 source-file $HOME/.config/tmux/statusbar.conf
 
 # use 24 bit true colors
-set-option -g default-terminal "tmux-256color"
 set-option -sa terminal-overrides ',alacritty*:Tc'
+# enable hyperlink support for alacritty
+set-option -sa terminal-features ',alacritty:hyperlinks'
 
 # dynamically set titles
 set-option -g set-titles on
