Shorten network block in i3status

--- a/dot_config/i3status-rust/config.toml
+++ b/dot_config/i3status-rust/config.toml
@@ -23,7 +23,7 @@ format = " $icon RAM: $mem_used.eng(hide_unit:true, hide_prefix:true, w:1)/$mem_
 
 [[block]]
 block = "net"
-format = " $icon {$signal_strength $ssid $frequency|Wired connection} via $device "
+format = " $icon {$signal_strength $ssid|} "
 
 [[block]]
 block = "sound"
