--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -14,6 +14,7 @@ input type:keyboard {
   xkb_layout "us"
   xkb_variant "altgr-intl"
   xkb_options "caps:escape"
+  xkb_numlock enable
 }
 
 input "7504:24868:Ultimate_Gadget_Laboratories_UHK_60_v2" {
