--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -131,6 +131,8 @@ bindsym Mod1+grave exec makoctl restore
 for_window [app_id="floating"] floating enable
 for_window [app_id="com.saivert.pwvucontrol"] floating enable
 
+assign [app_id="org.keepassxc.KeePassXC"] workspace $ws10
+
 bar {
     position top
     strip_workspace_numbers yes
@@ -139,5 +141,8 @@ bar {
 }
 
 default_border pixel 1
+
+# Autostart
+exec swaymsg "exec keepassxc"
 
 include /etc/sway/config.d/*
