--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -146,3 +146,7 @@ default_border pixel 1
 exec swaymsg "exec keepassxc"
 
 include /etc/sway/config.d/*
+
+# systemd integration
+exec "systemctl --user import-environment {,WAYLAND_}DISPLAY SWAYSOCK; systemctl --user start sway-session.target"
+exec swaymsg -t subscribe '["shutdown"]' && systemctl --user stop sway-session.target
